# berry-pasty

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  compose.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  service.rs  store.rs
