[package]
name = "berry-pasty"
version = "0.1.4"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]

[dependencies]
serde = "1.0"
redb = "2.1"
nanoid = "0.4"
url = "2.5"
anyhow = "1.0"
chrono = "0.4"

[dependencies.rocket]
version = "0.5"
features = ["json"]

[profile.release]
opt-level = 3
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
