[package]
authors = [ "GZTime <Time.GZ@outlook.com>" ]
edition = "2024"
name = "berry-pasty"
version = "0.2.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
nanoid = "0.4"
redb = "3.0"
serde = "1.0"
url = "2.5"

[dependencies.rocket]
features = [ "json" ]
version = "0.5"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
